kpt/published/express-web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: express-web-ingress
  labels:
    meanpug.com/app: express-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: choo-choo.meanpug.com
    http:
      paths:
      - path: /
        backend:
          serviceName: express-web-service
          servicePort: 80
